--- a/tdd-poker/package.json
+++ b/tdd-poker/package.json
@@ -6,9 +6,7 @@
   "version": "1.0.0",
   "description": "Practicing TDD by implementing function to compare two poker hands.",
   "main": "index.js",
-  "scripts": {
-    "test": "npm run test"
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "https://github.com/rmusteikis/exercises/tree/tdd-poker"
@@ -17,5 +15,8 @@
   "license": "ISC",
   "devDependencies": {
     "jest": "^26.5.3"
+  },
+  "dependencies": {
+    "lodash": "^4.17.20"
   }
 }
